deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: labid
  name: labid
  namespace: onyxia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labid
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: labid
    spec:
      serviceAccountName: labid
      containers:
        - image: europe-west4-docker.pkg.dev/artifact-registry-5n/dapla-lab-docker/onyxia/aux/labid:dev1
          name: labid
          resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: labid
  name: labid
  namespace: onyxia
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: labid
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: labid
  namespace: onyxia
spec:
  exportTo:
    - .
  hosts:
    - container.googleapis.com
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: NONE
